--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -5,8 +5,8 @@
             "type": "lldb",
             "request": "launch",
             "name": "Debug",
-            "program": "${workspaceFolder}/main",
-            "args": ["./src/tail.c", "-n", "20"],
+            "program": "${workspaceFolder}/wordcount",
+            "args": [],
             "cwd": "${workspaceFolder}",
             "preLaunchTask": "Makefile",
             "env": {
