--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -11,7 +11,8 @@
             "preLaunchTask": "Makefile",
             "env": {
                 "ASAN_OPTIONS": "detect_leaks=0"
-            }
+            },
+            //"stdio": "src/tail.c"
         }
     ]
 }
